[lgthinq][fix] deprecations and instanceof pattern
Signed-off-by: Nemer Daud <nemer@smartsw.com.br>